# Solution

./: README.md
2023 yard hoof cup/C++ The end scene/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  2.cpp  2_2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  7_2.cpp  8.cpp  9.cpp  CMakeLists.txt
2023 yard hoof cup/C++ The first scene/: 1.cpp  12.cpp  13.cpp  2.cpp  3.cpp  6.cpp  8.cpp  9.cpp  CMakeLists.txt
2023 yard hoof cup/C++ The second scene/: 13.cpp  5.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
2023 yard hoof cup/C++ The third scene/: 1.cpp  10.cpp  11.cpp  12_3.cpp  13.cpp  2.cpp  5.cpp  6.cpp  8.cpp  CMakeLists.txt
2023 yard hoof cup/Python The end scene/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  main.py
Preliminary round of the 2023 Yard Hoof Cup National Vocational College Programming Competition/The first scene/: 10.cpp  11.cpp  3.cpp  4.cpp  5.cpp  7.cpp
Preliminary round of the 2023 Yard Hoof Cup National Vocational College Programming Competition/The second scene/: 1.cpp  10.cpp  11.cpp  12_1.cpp  12_2.cpp  2.cpp  3.cpp  4.cpp  6.cpp
Preliminary round of the 2023 Yard Hoof Cup National Vocational College Programming Competition/The third scene/: 12_1.cpp  12_2.cpp  13.cpp  3.cpp  4.cpp  7.cpp  9.cpp  main.cpp
