cmake_minimum_required(VERSION 3.27)
project(third)

set(CMAKE_CXX_STANDARD 17)

add_executable(A main.cpp)
add_executable(1 1.cpp)
add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(6 6.cpp)
add_executable(7 7.cpp)
add_executable(8 8.cpp)
add_executable(9 9.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(12 12_2.cpp)
add_executable(13 13.cpp)
add_executable(12_2 12_1.cpp)
add_executable(12_3 12_3.cpp)